src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_cached_document-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "document_file_id": "file-id",
  "title": "title",
  "id": "id",
  "type": "document"
}
