src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_cached_document.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result.clone().with_caption(\"caption\").with_description(\"desc\").with_input_message_content(InputMessageContentText::new(\"text\")).with_caption_parse_mode(ParseMode::Markdown).with_reply_markup([[InlineKeyboardButton::for_url(\"text\",\n\"url\")]]),)"
---
{
  "caption": "caption",
  "description": "desc",
  "document_file_id": "file-id",
  "input_message_content": {
    "message_text": "text"
  },
  "parse_mode": "Markdown",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  },
  "title": "title",
  "id": "id",
  "type": "document"
}
