src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_cached_gif-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "gif_file_id": "file-id",
  "id": "id",
  "type": "gif"
}
