src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_cached_photo-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "photo_file_id": "file-id",
  "id": "id",
  "type": "photo"
}
